# viber

./: Cargo.toml  README.md  amplify.yml  build.sh  justfile  package.json
assets/: demo.webm
src/: lib.rs  renderer.rs
src/shaders/: shader.wgsl
www/: index.html  index.js  style.css
